@@ -6,7 +6,16 @@
 # Additional rules supported: perl_, aout_test, aout_install, use them
 # for a.out style perl (which may fork).
 
+perl_version="5.00${PATCHLEVEL}_$SUBVERSION"
+case "$archname" in
+ *-thread)	dll_post=_thr 
+		perl_version="${perl_version}-threaded";;
+ *)		dll_post='' ;;
+esac
+
 $spitshell >>Makefile <<!GROK!THIS!
+
+PERL_VERSION = $perl_version
 
 AOUT_OPTIMIZE = $optimize
 AOUT_CCCMD	= \$(CC) $aout_ccflags \$(AOUT_OPTIMIZE)
@@ -22,13 +31,16 @@ AOUT_CLDFLAGS_DLL	= -Zexe -Zmt -Zcrtdll
 
 LD_OPT		= $optimize
 
+PERL_DLL_BASE	= perl$dll_post
+PERL_DLL	= \$(PERL_DLL_BASE)\$(DLSUFFIX)
+
 !GROK!THIS!
 
 $spitshell >>Makefile <<'!NO!SUBS!'
-$(LIBPERL): perl.imp perl.dll perl5.def
+$(LIBPERL): perl.imp $(PERL_DLL) perl5.def
 	emximp -o $(LIBPERL) perl.imp
 
-$(AOUT_LIBPERL_DLL): perl.imp perl.dll perl5.def
+$(AOUT_LIBPERL_DLL): perl.imp $(PERL_DLL) perl5.def
 	emximp -o $(AOUT_LIBPERL_DLL) perl.imp
 
 perl.imp: perl5.def
@@ -38,12 +50,12 @@ perl.imp: perl5.def
 	echo	'emx_malloc		emxlibcm	402	?' >> $@
 	echo	'emx_realloc		emxlibcm	403	?' >> $@
 
-perl.dll: $(obj) perl5.def perl$(OBJ_EXT)
+$(PERL_DLL): $(obj) perl5.def perl$(OBJ_EXT)
 	$(LD) $(LD_OPT) $(LDDLFLAGS) -o $@ perl$(OBJ_EXT) $(obj) $(libs) perl5.def
 
 perl5.def: perl.linkexp
-	echo "LIBRARY 'Perl' INITINSTANCE TERMINSTANCE"	> $@
-	echo DESCRIPTION "'Perl interpreter, export autogenerated'"	>>$@
+	echo "LIBRARY '$(PERL_DLL_BASE)' INITINSTANCE TERMINSTANCE"	> $@
+	echo DESCRIPTION "'Perl interpreter v$(PERL_VERSION), export autogenerated'"	>>$@
 	echo STACKSIZE 32768				>>$@
 	echo CODE LOADONCALL				>>$@
 	echo DATA LOADONCALL NONSHARED MULTIPLE		>>$@
@@ -68,7 +80,7 @@ perl.exports: perl.exp EXTERN.h perl.h
 		$(CC) -DEMBED  -E - | \
 		awk '{if ($$2 == "") print $$1}' | sort | uniq > $@
 
-perl.linkexp: perl.exports perl.map
+perl.linkexp: perl.exports perl.map  os2/os2.sym
 	cat perl.exports os2/os2.sym perl.map | sort | uniq -d | sed -e 's/\w\+/  "\0"/' > perl.linkexp
 
 # We link miniperl statically, since .DLL depends on $(DYNALOADER) 
